# laptop_main_backend

./: db.sqlite3  pyproject.toml
authentication/: models.py
authentication/migrations/: 0001_initial.py
core/: settings.py  urls.py
payment/: admin.py  models.py  serializers.py  views.py
payment/migrations/: 0001_initial.py
