[tool.poetry]
name = "laptop-main-backend"
version = "0.1.0"
description = ""
authors = ["Abdulrahman Dawoud <dawoud.abdulrahman.2004@gmail.com>"]
readme = "README.md"
packages = [{include = "laptop_main_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
